--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                          <div class="career-list">
                             <div class="col-md-12"><!--class="wow rubberBand"--> 
                                 <div class="featured-item career-box text-left wow" style="background: #222222">
-                                <img src="img/images/silos.png" alt="" style="width: 80%; display: block; margin-left: auto; margin-right: auto;" id="theImage">       <div class="divider d-border d-solid d-single text-center">
+                                <img src="img/parallax/silo_initial.png" alt="" style="width: 80%; display: block; margin-left: auto; margin-right: auto;" id="theImage">       <div class="divider d-border d-solid d-single text-center">
                             <i class="fa fa-ellipsis-h" style="background: #222222"></i>
                         </div>
                                     <div class="title text-uppercase">
@@ -729,7 +729,7 @@
 
      <script>
      function pictureChange()
-     { document.getElementById("theImage").src="img/images/silos2.png"; }
+     { document.getElementById("theImage").src="img/parallax/silo_solution.png"; }
      </script>
 
      <script type="text/javascript">
