--- a/index.html
+++ b/index.html
@@ -182,7 +182,13 @@
                                     <h4 style="display: inline">Survival Rate</h4>
                                 </div>
                                 <div class="desc" style="text-align: justify">
-                                    Only 60 out of 500 corporations from the fortune 500 from 1955 is still as leading as it was <sup><a href="#fn2" id="ref2">2</a></sup>. Even more so, the expected lifetime of a company is projected to be only 18 year in 2027<sup><a href="#fn3" id="ref3">3</a></sup> (compared to 61 year in 1955). </br></br>
+                                    Only 60 out of 500 corporations from the fortune 500 from 1955 is still as leading as it was <sup><a href="#fn2" id="ref2">2</a></sup>. Even more so, as can be seen in the graph below <sup><a href="#fn3" id="ref3">3</a></sup>, the expected lifetime of a company is projected to be only 18 year in 2027<sup><a href="#fn4" id="ref4">4</a></sup>. 
+                                </div>
+                                <div>
+                                <div class="divider d-border d-solid d-single text-center">
+                            <i class="fa fa-ellipsis-h"></i>
+                             </div>
+                                <img src="img/parallax/graph_le.png" alt="" style="width: 100%; display: block; margin-left: auto; margin-right: auto;" id="theImage">
                                 </div>
                             </div>
                         </div>
@@ -207,7 +213,8 @@
                          <div class="career-list">
                             <div class="col-md-12"><!--class="wow rubberBand"--> 
                                 <div class="featured-item career-box text-left wow" style="background: #222222">
-                                <img src="img/parallax/silo_initial.png" alt="" style="width: 80%; display: block; margin-left: auto; margin-right: auto;" id="theImage">       <div class="divider d-border d-solid d-single text-center">
+                                <img src="img/parallax/silo_initial.png" alt="" style="width: 80%; display: block; margin-left: auto; margin-right: auto;" id="theImage">       
+                                <div class="divider d-border d-solid d-single text-center">
                             <i class="fa fa-ellipsis-h" style="background: #222222"></i>
                         </div>
                                     <div class="title text-uppercase">
@@ -676,8 +683,14 @@
                              http://www.dmi.org/?page=2015DVIandOTW<a href="#ref1" title="Jump back to footnote 1 in the text.">↩</a></br></sup>
                              <sup id="fn2">2] Perry, M.J. (2015, October). Fortune 500 firms in 1955 v. 2015; Only 12% remain, thanks to the creative destruction that fuels economic prosperity. </br>
                              Retrieved April 02, 2017, from https://www.aei.org/publication/fortune-500-firms-in-1955-vs-2015-only-12-remain-thanks-to-the-creative-destruction-that-fuels-economic-growth/<a href="#ref2" title="Jump back to footnote 2 in the text.">↩</a></br></sup>
-                              <sup id="fn3">3] Perkin, N. (2017, April). Is the Life Expectancy of Companies Really Shrinking? Retrieved April 02, 2017, 
-                              from http://www.onlydeadfish.co.uk/only_dead_fish/2015/09/is-the-life-expectancy-of-companies-really-shrinking.html<a href="#ref3" title="Jump back to footnote 3 in the text.">↩</a></br></sup>
+                              <!--Bron-->
+                              <sup id="fn3">3] Foster, R. (2012, April). Creative destruction whips through corporate America. To survive and thrive business leaders must “create, operate, and trade” without losing control. Retrieved April 12, 2017, 
+                              from https://engageinnovate.files.wordpress.com/2012/03/creative-destruction-whips-through-corporate-america_final2012.pdf<a href="#ref3" title="Jump back to footnote 3 in the text.">↩</a></br></sup>
+                              <!--Bron-->
+                             <!--Bron-->
+                              <sup id="fn4">4] Perkin, N. (2017, April). Is the Life Expectancy of Companies Really Shrinking? Retrieved April 02, 2017, 
+                              from http://www.onlydeadfish.co.uk/only_dead_fish/2015/09/is-the-life-expectancy-of-companies-really-shrinking.html<a href="#ref4" title="Jump back to footnote 4 in the text.">↩</a></br></sup>
+                              <!--Bron-->
                         </div> </div> </br></br>
         <!--body content end-->
 
