--- a/index.html
+++ b/index.html
@@ -464,19 +464,19 @@
                                 <a class="wow fadeInDown" href="">Evaluating Outcome</a>
                             </dt>
                             <dd>
-                                text
+                                In order to create a lasting impact, it is of importance to evaluate whether the innovations works. If needed the solution can be improved in an iterative way. 
                             </dd>
                             <dt>
                                 <a class="wow fadeInDown" href="">Educating Stakeholder</a>
                             </dt>
                             <dd>
-                                Text
+                                In this stage, it is important to start embedding the design by changing the mindset. This is to make sure that, through a close collaboration with the stakeholders, the changes in the processes are made permanent. Because of the many different stakeholders, it is important to speak in their language, which is mainly a business language. The model will be explained through KPI's, and implemented into business models. 
                             </dd>
                             <dt>
                                 <a class="wow fadeInDown" href="">Create Acceptance</a>
                             </dt>
                             <dd>
-                                It is important to make sure that the strategic work that is executed is really adopted by the company in the long term.
+                                It is important to make sure that the strategic work that is executed is really adopted by the company in the long term. Not only the managament, but the whole company should be convinced about the success of the outcomes, and the need to follow up on these outcomes. Especially to use design, and a human-centered approach, as the main driver of innovation. 
                             </dd>
                         </dl>
                         <!-- accordion time line end-->
