--- a/index.html
+++ b/index.html
@@ -68,10 +68,13 @@
                                 <a href="#start" data-scroll>About</a>
                             </li>
                             <li  class="">
-                                <a href="#service" data-scroll>Services</a>
+                                <a href="#problem" data-scroll>Problem</a>
                             </li>
                             <li  class="">
-                                <a href="#feature" data-scroll>Process</a>
+                                <a href="#process" data-scroll>Process</a>
+                            </li>
+                             <li  class="">
+                                <a href="#usecase" data-scroll>Usecase</a>
                             </li>
                             <li  class="">
                                 <a href="#blog" data-scroll>Blog</a>
@@ -174,7 +177,7 @@
                                 <img src="img/parallax/graph_le.gif" alt="" style="width: 100%; display: block; margin-left: auto; margin-right: auto;">
                                 </div>
                                 <div>
-                                    </br><h4 class="text-uppercase text-center" style="cursor: pointer; cursor;"><a> Click to Visualise </a></h4>
+                                    </br><h4 id="show1" class="text-uppercase text-center" style="cursor: pointer; cursor;"><a> Click to Visualise </a></h4>
                                 </div>
                             </div>
                         </div>
@@ -200,7 +203,7 @@
                                 <img src="img/parallax/graph_bw.gif" alt="" style="width: 100%; display: block; margin-left: auto; margin-right: auto;">
                                 </div>
                                  <div>
-                                    </br><h4 class="text-uppercase text-center" style="cursor: pointer; cursor;"><a> Click to Visualise </a></h4>
+                                    </br><h4 id="show2" class="text-uppercase text-center" style="cursor: pointer; cursor;"><a> Click to Visualise </a></h4>
                                 </div>
                             </div>
                         </div>
@@ -212,7 +215,7 @@
                         <!--facts danger-->
 
             <!--Silos (exclamation-triangle)-->
-            <div id="start" class="page-content" style="background: #222222">
+            <div id="problem" class="page-content" style="background: #222222">
                 <div class="container">
                     <!--feature border box start-->
                     <div class="row">
@@ -274,7 +277,7 @@
              <!--facts good-->
 
            <!--feature-->
-            <div id="start" class="page-content">
+            <div class="page-content">
                 <div class="container">
                     <!--feature border box start-->
                     <div class="row">
@@ -293,7 +296,7 @@
                                      <sup><a href="#fn1" id="ref1">1</a></sup>
                                 </div>
                                  <div>
-                                   </br> <h4 class="text-uppercase text-center" style="cursor: pointer; cursor;"><a> Click to Visualise </a></h4>
+                                   </br> <h4 id="show3" class="text-uppercase text-center" style="cursor: pointer; cursor;"><a> Click to Visualise </a></h4>
                                 </div>
                             </div>
                             <div class="col-md-6 fadeInLeft" id="graph3" style="display: none">  
@@ -309,7 +312,7 @@
                         <!--facts good-->
 
             <!--core process-->
-            <div class="page-content" id="feature">
+            <div class="page-content" id="process">
                 <div class="container">
                     <div class="row">
                         <div class="heading-title text-center ">
@@ -324,6 +327,7 @@
                                 <article class="timeline-item">
                                 <!--Strength--> 
                             <div class="col-md-12 featured-item feature-border-box text-left wow fadeInLeft">
+                            <div class="col-md-12">
                                 <div class="blog-post">
                                         <blockquote class="quote-post">
                                             <p>for something new, stop doing something old</p>
@@ -333,7 +337,8 @@
                                     With <font style="color: rgb(242,103,33)">complex problems</font>, creativity requires courage, and change requires perseverance. 
                                     I can help to set in motion, the chain-reaction of innovation by making intricate problems tangible with the help of a rock-solid vision. 
                                     This is because, in order to be successful, innovation and creativity should be seen as a state of mind, and not the product of logical thought. 
-                                    </br></br></br>
+                                    </br></br>
+                                    </div>
                                  </div>
                             </div>
                              <!--Strength end-->
@@ -379,6 +384,7 @@
                                 <article class="timeline-item ">
                                 <!--Strength-->
                             <div class="col-md-12 featured-item feature-border-box text-left wow fadeInLeft" style="display: inline;">
+                             <div class="col-md-12">
                                 <div class="blog-post">
                                         <blockquote class="quote-post">
                                             <p>Co-Creation is key to success</p>
@@ -386,7 +392,8 @@
                                     </div>
                                 <div class="desc" style="text-align: justify;">
                                           In <font style="color: rgb(242,103,33)"> dynamic environments </font>, that are subject to non-linear change, co-creation is key to success in innovation. I can help to create support for solutions within large corporations, and my resilience ensures an outcome that suits both the company's resources, and it's customer needs. 
-                                          </br></br></br></br>
+                                          </br></br></br>
+                                </div>
                                 </div>
                             </div>
                              <!--Strength end-->
@@ -432,6 +439,7 @@
                                 <article class="timeline-item ">
                                  <!--Strength-->
                             <div class="col-md-12 featured-item feature-border-box text-left wow fadeInLeft" style="display: inline;">
+                             <div class="col-md-12">
                                 <div class="blog-post">
                                         <blockquote class="quote-post">
                                             <p>implementing into brand DNA</p>
@@ -440,6 +448,7 @@
                                 <div class="desc" style="text-align: justify">
                                      Design and innovations is not solely about providing solutions. It is about <font style="color: rgb(242,103,33)">changing a mindset</font>, and implementing the solution seamlessly into the daily operations. I am able to create support for the solution, and gradually implement the solution into the Brand DNA, without disturbing the daily practices. 
                                      </br></br></br>
+                                </div>
                                 </div>
                             </div>
                              <!--Strength end-->
@@ -490,6 +499,8 @@
             <!--core process-->
 
             <!--button-->
+            <div id="usecase">
+            </br></br></br>
           <div>
             <button class="btn btn-small btn-dark-solid" id="btnClick" style="width: 100%; display: block; margin-left: auto; margin-right: auto;">
             <h3 style="display: inline"><font style="color: white">click to switch showcase</font></h3></button>
@@ -561,6 +572,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
             </div>
             </div>
             <!--skills-->
@@ -728,23 +740,22 @@
               <div class="container">
                         <div class="col-md-12">
                             <h4 class="text-uppercase">References</h4>
-                             <sup id="fn1">1] Rae, J. (2016, December). 2015 dmi:Design Value Index Results and Commentary. Retrieved April 02, 2017, from 
+                             <sup id="fn1"><font style="color: rgb(242,103,33)">1]</font> Rae, J. (2016, December). 2015 dmi:Design Value Index Results and Commentary. Retrieved April 02, 2017, from 
                              http://www.dmi.org/?page=2015DVIandOTW<a href="#ref1" title="Jump back to footnote 1 in the text.">↩</a></br></sup>
-                             <sup id="fn2">2] Perry, M.J. (2015, October). Fortune 500 firms in 1955 v. 2015; Only 12% remain, thanks to the creative destruction that fuels economic prosperity. </br>
-                             Retrieved April 02, 2017, from https://www.aei.org/publication/fortune-500-firms-in-1955-vs-2015-only-12-remain-thanks-to-the-creative-destruction-that-fuels-economic-growth/<a href="#ref2" title="Jump back to footnote 2 in the text.">↩</a></br></sup>
+                             <sup id="fn2"><font style="color: rgb(242,103,33)">2]</font>  Perry, M.J. (2015, October). Fortune 500 firms in 1955 v. 2015; Only 12% remain, thanks to the creative destruction that fuels economic prosperity. Retrieved April 02, 2017, from https://www.aei.org/publication/fortune-500-firms-in-1955-vs-2015-only-12-remain-thanks-to-the-creative-destruction-that-fuels-economic-growth/<a href="#ref2" title="Jump back to footnote 2 in the text.">↩</a></br></sup>
                               <!--Bron-->
-                              <sup id="fn3">3] Foster, R. (2012, April). Creative destruction whips through corporate America. To survive and thrive business leaders must “create, operate, and trade” without losing control. Retrieved April 12, 2017, 
+                              <sup id="fn3"><font style="color: rgb(242,103,33)">3]</font>  Foster, R. (2012, April). Creative destruction whips through corporate America. To survive and thrive business leaders must “create, operate, and trade” without losing control. Retrieved April 12, 2017, 
                               from https://engageinnovate.files.wordpress.com/2012/03/creative-destruction-whips-through-corporate-america_final2012.pdf<a href="#ref3" title="Jump back to footnote 3 in the text.">↩</a></br></sup>
                               <!--Bron-->
                              <!--Bron-->
-                              <sup id="fn4">4] Perkin, N. (2017, April). Is the Life Expectancy of Companies Really Shrinking? Retrieved April 02, 2017, 
+                              <sup id="fn4"><font style="color: rgb(242,103,33)">4]</font>  Perkin, N. (2017, April). Is the Life Expectancy of Companies Really Shrinking? Retrieved April 02, 2017, 
                               from http://www.onlydeadfish.co.uk/only_dead_fish/2015/09/is-the-life-expectancy-of-companies-really-shrinking.html<a href="#ref4" title="Jump back to footnote 4 in the text.">↩</a></br></sup>
                               <!--Bron-->
                                <!--Bron-->
-                              <sup id="fn5">5]  Lee, H. L., Padmanabhan, V., & Whang, S. (1997). The bullwhip effect in supply chains. Sloan management review, 38(3), 93<a href="#ref5" title="Jump back to footnote 5 in the text.">↩</a></br></sup>
+                              <sup id="fn5"><font style="color: rgb(242,103,33)">5]</font>   Lee, H. L., Padmanabhan, V., & Whang, S. (1997). The bullwhip effect in supply chains. Sloan management review, 38(3), 93<a href="#ref5" title="Jump back to footnote 5 in the text.">↩</a></br></sup>
                               <!--Bron-->
                                <!--Bron-->
-                              <sup id="fn6">6]  Calabretta, G., Gemser, G., & Karpen, I. (2016). Strategic design: eight essential practices every strategic designer must master. Amsterdam: BIS<a href="#ref6" title="Jump back to footnote 6 in the text.">↩</a></br></sup>
+                              <sup id="fn6"><font style="color: rgb(242,103,33)">6]</font>   Calabretta, G., Gemser, G., & Karpen, I. (2016). Strategic design: eight essential practices every strategic designer must master. Amsterdam: BIS<a href="#ref6" title="Jump back to footnote 6 in the text.">↩</a></br></sup>
                               <!--Bron-->
                         </div> </div> </br></br>
         <!--body content end-->
@@ -797,15 +808,18 @@
   <!--Graph-->
  <script>
      function showDiv2() {
-   document.getElementById('graph2').style.display = "block"; }
+   document.getElementById('graph2').style.display = "block"; 
+   document.getElementById('show2').style.display = "none"; }
    </script>
     <script>
      function showDiv1() {
-   document.getElementById('graph1').style.display = "block"; }
+   document.getElementById('graph1').style.display = "block"; 
+   document.getElementById('show1').style.display = "none"; }
    </script>
       <script>
      function showDiv3() {
-   document.getElementById('graph3').style.display = "block"; }
+   document.getElementById('graph3').style.display = "block"; 
+   document.getElementById('show3').style.display = "none"; }
    </script>
     <!--Graph-->
 
